@@ -9,146 +9,41 @@ import org.springframework.stereotype.Service;
 
 import java.time.LocalDate;
 import java.time.format.DateTimeFormatter;
-import java.util.ArrayList;
-import java.util.Iterator;
-import java.util.List;
+import java.util.*;
+import java.util.stream.Collectors;
 
 @Service
 public class AsteroidsService {
+
     private final NasaClient client;
+
     private final DateTimeFormatter dateFormatter = DateTimeFormatter.ofPattern("yyyy-MM-dd");
+    private final ObjectMapper objectMapper = new ObjectMapper();
 
     public AsteroidsService(NasaClient client) {
         this.client = client;
     }
 
     public NasaApiResponse getRawAsteroids(int days) {
-        return getAsteroidsFeedWithDays(days, NasaApiResponse.class);
+        return getAsteroidsFeed(days, NasaApiResponse.class);
     }
 
     public List<AsteroidResponseDTO> getMappedAsteroids(int days) {
-        String response = getAsteroidsFeedWithDays(days, String.class);
-
-        List<AsteroidResponseDTO> results = new ArrayList<>();
-        try {
-            JsonNode root = parseResponseToJson(response);
-            JsonNode neoMap = extractNearEarthObjects(root);
-
-            Iterator<String> dateFields = getDateFields(neoMap);
-            while (dateFields.hasNext()) {
-                String date = dateFields.next();
-                JsonNode asteroidArray = neoMap.get(date);
-                processAsteroids(asteroidArray, date, results);
-            }
-
-        } catch (Exception e) {
-            e.printStackTrace();
-        }
-
-        return results;
+        JsonNode neoMap = fetchNeoMap(days);
+        return extractAsteroidsFromNeoMap(neoMap, false);
     }
 
     public List<AsteroidResponseDTO> getTopDangerousAsteroids(int days) {
-        if (days < 1 || days > 7) {
-            throw new IllegalArgumentException("El parámetro 'days' debe estar entre 1 y 7.");
-        }
+        validateDays(days);
+        JsonNode neoMap = fetchNeoMap(days);
 
-        String response = getAsteroidsFeedWithDays(days, String.class);
-        List<AsteroidResponseDTO> results = new ArrayList<>();
-
-        try {
-            JsonNode neoMap = extractNearEarthObjects(parseResponseToJson(response));
-            Iterator<String> dateFields = getDateFields(neoMap);
-
-            while (dateFields.hasNext()) {
-                String date = dateFields.next();
-                JsonNode asteroidArray = neoMap.get(date);
-
-                for (JsonNode asteroid : asteroidArray) {
-                    if (asteroid.get("is_potentially_hazardous_asteroid").asBoolean()) {
-                        JsonNode approach = asteroid.get("close_approach_data").get(0);
-                        double diameterMin = asteroid.get("estimated_diameter").get("kilometers").get("estimated_diameter_min").asDouble();
-                        double diameterMax = asteroid.get("estimated_diameter").get("kilometers").get("estimated_diameter_max").asDouble();
-                        double avgDiameter = (diameterMin + diameterMax) / 2.0;
-                        double speed = approach.get("relative_velocity").get("kilometers_per_hour").asDouble();
-                        String planet = approach.get("orbiting_body").asText();
-                        String name = asteroid.get("name").asText();
-                        String approachDate = approach.get("close_approach_date").asText();
-
-                        results.add(new AsteroidResponseDTO(name, avgDiameter, speed, approachDate, planet));
-                    }
-                }
-            }
-
-        } catch (Exception e) {
-            e.printStackTrace();
-        }
-
-        // Ordenar por diámetro descendente y devolver top 3
-        return results.stream()
-                .sorted((a1, a2) -> Double.compare(a2.diameter(), a1.diameter()))
+        return extractAsteroidsFromNeoMap(neoMap, true).stream()
+                .sorted(Comparator.comparingDouble(AsteroidResponseDTO::diameter).reversed())
                 .limit(3)
-                .toList();
+                .collect(Collectors.toList());
     }
 
-
-    private JsonNode parseResponseToJson(String response) throws Exception {
-        ObjectMapper objectMapper = new ObjectMapper();
-        return objectMapper.readTree(response);
-    }
-
-    private JsonNode extractNearEarthObjects(JsonNode root) {
-        return root.get("near_earth_objects");
-    }
-
-    private Iterator<String> getDateFields(JsonNode neoMap) {
-        return neoMap.fieldNames();
-    }
-
-    private void processAsteroids(JsonNode asteroidArray, String date, List<AsteroidResponseDTO> results) {
-        for (JsonNode asteroid : asteroidArray) {
-            AsteroidResponseDTO asteroidDTO = mapAsteroidFromResponse(asteroid, date);
-            results.add(asteroidDTO);
-        }
-    }
-
-    private AsteroidResponseDTO mapAsteroidFromResponse(JsonNode asteroid, String date) {
-        String name = asteroid.get("name").asText();
-        double diameter = extractDiameter(asteroid);
-        double speed = extractSpeed(asteroid);
-        String planet = extractPlanet(asteroid);
-
-        return new AsteroidResponseDTO(name, diameter, speed, date, planet);
-    }
-
-    private double extractDiameter(JsonNode asteroid) {
-        return asteroid
-                .get("estimated_diameter")
-                .get("kilometers")
-                .get("estimated_diameter_max")
-                .asDouble();
-    }
-
-    private double extractSpeed(JsonNode asteroid) {
-        JsonNode approachData = asteroid
-                .get("close_approach_data")
-                .get(0);
-
-        return approachData
-                .get("relative_velocity")
-                .get("kilometers_per_hour")
-                .asDouble();
-    }
-
-    private String extractPlanet(JsonNode asteroid) {
-        JsonNode approachData = asteroid
-                .get("close_approach_data")
-                .get(0);
-
-        return approachData.get("orbiting_body").asText();
-    }
-
-    private <T> T getAsteroidsFeedWithDays(int days, Class<T> responseType) {
+    private <T> T getAsteroidsFeed(int days, Class<T> responseType) {
         LocalDate startDate = LocalDate.now();
         LocalDate endDate = startDate.plusDays(days);
 
@@ -157,5 +52,59 @@ public class AsteroidsService {
                 endDate.format(dateFormatter),
                 responseType
         );
+    }
+
+    private JsonNode fetchNeoMap(int days) {
+        String response = getAsteroidsFeed(days, String.class);
+        try {
+            JsonNode root = objectMapper.readTree(response);
+            return root.get("near_earth_objects");
+        } catch (Exception e) {
+            throw new RuntimeException("Error al parsear la respuesta de la API de la NASA.", e);
+        }
+    }
+
+    private List<AsteroidResponseDTO> extractAsteroidsFromNeoMap(JsonNode neoMap, boolean onlyHazardous) {
+        List<AsteroidResponseDTO> results = new ArrayList<>();
+        neoMap.fieldNames().forEachRemaining(date -> {
+            JsonNode asteroidArray = neoMap.get(date);
+            for (JsonNode asteroid : asteroidArray) {
+                if (!onlyHazardous || asteroid.get("is_potentially_hazardous_asteroid").asBoolean()) {
+                    results.add(mapAsteroid(asteroid, date));
+                }
+            }
+        });
+        return results;
+    }
+
+    private AsteroidResponseDTO mapAsteroid(JsonNode asteroid, String date) {
+        String name = asteroid.get("name").asText();
+        double diameter = calculateAverageDiameter(asteroid);
+        double speed = extractSpeed(asteroid);
+        String planet = extractPlanet(asteroid);
+
+        return new AsteroidResponseDTO(name, diameter, speed, date, planet);
+    }
+
+    private double calculateAverageDiameter(JsonNode asteroid) {
+        JsonNode km = asteroid.get("estimated_diameter").get("kilometers");
+        double min = km.get("estimated_diameter_min").asDouble();
+        double max = km.get("estimated_diameter_max").asDouble();
+        return (min + max) / 2.0;
+    }
+
+    private double extractSpeed(JsonNode asteroid) {
+        return asteroid.get("close_approach_data").get(0)
+                .get("relative_velocity").get("kilometers_per_hour").asDouble();
+    }
+
+    private String extractPlanet(JsonNode asteroid) {
+        return asteroid.get("close_approach_data").get(0).get("orbiting_body").asText();
+    }
+
+    private void validateDays(int days) {
+        if (days < 1 || days > 7) {
+            throw new IllegalArgumentException("El parámetro 'days' debe estar entre 1 y 7.");
+        }
     }
 }
